--- a/game.html
+++ b/game.html
@@ -23,22 +23,22 @@
             </article>
             <figure>
                 <div class="game">
-                    <a href="#" class="card">
+                    <a href="games/petualangan_kata.html" class="card">
                         <img src="Img/img-game-1.png" alt="Game 1">
                         <h3>Petualang Kata</h3>
                         <p>Mainkan game petualangan kata untuk memahami sejarah dan legenda Indonesia</p>
                     </a>
-                    <a href="#" class="card">
+                    <a href="games/pulau_kata.html" class="card">
                         <img src="Img/img-game-2.png" alt="Game 2">
                         <h3>Pulau Kata</h3>
                         <p>Mainkan game ini untuk meningkatkan kemampuan mengarangmu</p>
                     </a>
-                    <a href="#" class="card">
+                    <a href="games/sambung_kata.html" class="card">
                         <img src="Img/img-game-3.png" alt="Game 3">
                         <h3>Sambung Kata</h3>
                         <p>Mainkan game ini untuk menguji pemahaman menyambung kata-kata</p>
                     </a>
-                    <a href="#" class="card">
+                    <a href="games/sinonim_antonim_kata.html" class="card">
                         <img src="Img/img-game-4.png" alt="Game 4">
                         <h3>Sinonim/Anonim Kata</h3>
                         <p>Mainkan game ini untuk mengetahui sinonim dan anonim kata</p>
