--- a/LensaKata/Html/index.html
+++ b/LensaKata/Html/index.html
@@ -1,84 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beranda</title>
-    <link rel="stylesheet" href="/CSS/header.css">
-    <link rel="stylesheet" href="/CSS/styles.css">
-    <link rel="stylesheet" href="/CSS/about.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+    <link rel="icon" href="/Img/logo-4.png" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-</head>
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/CSS/styles.css" />
+    <link rel="stylesheet" href="/CSS/about.css" />
+    <link rel="stylesheet" href="/CSS/header.css" />
+  </head>
 
-<body>
+  <body>
     <header class="home-header">
-        <nav>
-            <div class="logo">
-                <h1>LensaKata</h1>
-            </div>
-            <ul>
-                <li><a href="#about">Tentang Kami</a></li>
-                <li><a href="/Html/forum.html">Forum</a></li>
-                <li><a href="/Html/papan-skor.html">Papan Skor</a></li>
-            </ul>
-        </nav>
-        <div class="container-header">
-            <div class="slogan">
-                <p>Belajar dan Bermain dengan kata</p>
-            </div>
-            <div class="header-card">
-                <div class="slogan-card">
-                    <p class="title-card">Legenda Bandung Bondowoso</p>
-                    <a href="/Html/game.html" class="play">Main!</a>
-                </div>
-            </div>
+      <nav class="navbar navbar-expand-lg custom-navbar">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/Html/index.html"
+            ><img
+              src="/Img/logo-4.png"
+              alt="logo-lensakata"
+              width="40"
+              height="40"
+            />
+            LensaKata</a
+          >
+          <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/Html/index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/Html/game.html">Game</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/Html/forum.html">Forum</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/Html/papan-skor.html">LeaderBoard</a>
+            </li>
+          </ul>
         </div>
+      </nav>
+      <div class="container-header">
+        <div class="slogan">
+          <p>Belajar dan Bermain dengan kata</p>
+        </div>
+        <div class="header-card">
+          <div class="slogan-card">
+            <p class="title-card">Legenda Bandung Bondowoso</p>
+            <a href="/Html/game.html" class="play">Main!</a>
+          </div>
+        </div>
+      </div>
     </header>
     <main>
-        <section>
-            <div class="container-section">
-                <div class="H1">
-                    <h2 id="about">Apa itu LensaKata ?</h2>
-                </div>
-                <div class="articel-p">
-                    <p>Tempat seru buat kamu yang suka main dan belajar! Disini, kamu bisa bermain sambil belajar kata - kata baru
-                        <br>lewat tantangan yang asyik dan penuh kejutan. Kamu bisa mengasah kemampuan membaca dan menambah
-                        <br>kosakata lewat permainan kata yang seru banget! &#127918;&#128214; </p>
-                </div>
-                <div class="H1">
-                    <h2>Kenapa Harus Coba</h2>
-                </div>
-                <div class ="game">
-                    <a class ="card">
-                        <img src="/Img/pict1.jpeg">
-                            <h3>Belajar jadi Seru</h3>
-                            <p>Kamu akan bertemu tantangan kata setiap hari yang bikin kamu pintar dan jago membaca!</p>
-                    </a>
-                    <a class ="card">
-                        <img src="/Img/pict2.jpeg">
-                        <h3>Hadiah/Reward</h3>
-                        <p>Setiap kamu menyelesaikan tantangan, kamu bisa dapat poin dan hadiah keren!</p>
-                    </a>
-                    <a class ="card">
-                        <img src="/Img/pict3.jpeg">
-                        <h3>Main Bareng Temen</h3>
-                        <p>Kamu bisa bersaing di papan peringkat, lihat siapa yang paling jago di antara teman - temanmu!</p>
-                    </a>
-                    <a class ="card">
-                        <img src="/Img/pict4.jpeg">
-                        <h3>Kemampuan Mengarang</h3>
-                        <p>Kamu bisa mencoba tantangan mengarang cerita seru dan unik serta punya kesempatan jadi penulis hebat dengan imajinasimu sendiri.</p>
-                    </a>
-                </div>
-        </section>
+      <section class="container mt-5">
+        <div class="text-center mb-4">
+          <h2 id="about">Apa itu LensaKata?</h2>
+        </div>
+        <div class="mb-4">
+          <p>
+            Tempat seru buat kamu yang suka main dan belajar! Di sini, kamu bisa
+            bermain sambil belajar kata-kata baru <br />lewat tantangan yang
+            asyik dan penuh kejutan. Kamu bisa mengasah kemampuan membaca dan
+            menambah <br />kosakata lewat permainan kata yang seru banget!
+            &#127918;&#128214;
+          </p>
+        </div>
+
+        <div class="text-center mb-4">
+          <h2>Kenapa Harus Coba</h2>
+        </div>
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card">
+              <img
+                src="/Img/pict1.jpeg"
+                class="card-img-top"
+                alt="Belajar jadi Seru"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Belajar jadi Seru</h5>
+                <p class="card-text">
+                  Kamu akan bertemu tantangan kata setiap hari yang bikin kamu
+                  pintar dan jago membaca!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <img
+                src="/Img/pict2.jpeg"
+                class="card-img-top"
+                alt="Hadiah/Reward"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Hadiah/Reward</h5>
+                <p class="card-text">
+                  Setiap kamu menyelesaikan tantangan, kamu bisa dapat poin dan
+                  hadiah keren!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <img
+                src="/Img/pict3.jpeg"
+                class="card-img-top"
+                alt="Main Bareng Temen"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Main Bareng Temen</h5>
+                <p class="card-text">
+                  Kamu bisa bersaing di papan peringkat, lihat siapa yang paling
+                  jago di antara teman-temanmu!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <img
+                src="/Img/pict4.jpeg"
+                class="card-img-top"
+                alt="Kemampuan Mengarang"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Kemampuan Mengarang</h5>
+                <p class="card-text">
+                  Kamu bisa mencoba tantangan mengarang cerita seru dan unik
+                  serta punya kesempatan jadi penulis hebat dengan imajinasimu
+                  sendiri.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-
-</body>
-
+  </body>
 </html>
