--- a/LensaKata/Html/papan-skor.html
+++ b/LensaKata/Html/papan-skor.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Papan Skor - Web Literasi Anak</title>
-    <link rel="stylesheet" href="/CSS/header.css" />
+    <title>Papan Skor</title>
     <link rel="stylesheet" href="/CSS/papan-skor.css" />
+    <link rel="stylesheet" href="/CSS/header.css" />
+    <link rel="icon" href="/Img/logo-4.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,66 +21,96 @@
     />
   </head>
   <body>
-    <nav>
-      <div class="logo">
-        <h1>LensaKata</h1>
+    <nav class="navbar navbar-expand-lg custom-navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/Html/index.html"
+          ><img
+            src="/Img/logo-4.png"
+            alt="logo-lensakata"
+            width="40"
+            height="40"
+          />
+          LensaKata</a
+        >
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/Html/index.html"
+              >Home</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/Html/game.html">Game</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/Html/forum.html">Forum</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/Html/papan-skor.html">LeaderBoard</a>
+          </li>
+        </ul>
       </div>
-      <ul>
-        <li><a href="/Html/index.html">Beranda</a></li>
-        <li><a href="/Html/forum.html">Forum</a></li>
-        <li><a href="/Html/papan-skor.html">Papan Skor</a></li>
-      </ul>
     </nav>
+    <div class="container text-center mt-5">
+      <header>
+        <h1 class="display-5">Hasil Akhir Tantangan</h1>
+      </header>
 
-    <header>
-      <h1>Hasil Akhir Tantangan</h1>
-    </header>
+      <section class="mt-4">
+        <p class="fs-4">Skor kamu: <strong>100 Poin</strong></p>
+        <p class="fs-5">
+          Kamu mendapatkan lencana: <strong>Pencari Kata Kunci Ahli</strong>
+        </p>
+        <a href="/Html/game.html" class="btn btn-primary btn-lg mt-3"
+          >Main Lagi</a
+        >
+      </section>
+    </div>
 
-    <section>
-      <p>Skor kamu: <strong>100 Poin</strong></p>
-      <p>Kamu mendapatkan lencana: <strong>Pencari Kata Kunci Ahli</strong></p>
-      <button><a href="/Html/game.html">Main Lagi</a></button>
-    </section>
-
-    <section>
-      <h2>Leaderboard</h2>
-      <table class="leaderboard">
-        <thead>
+    <div class="container mt-5">
+      <h2 class="text-center">Leaderboard</h2>
+      <table class="table table-hover table-striped table-bordered mt-4">
+        <thead class="table-dark">
           <tr>
-            <th>Posisi</th>
-            <th>Nama Pemain</th>
-            <th>Skor</th>
+            <th scope="col">#</th>
+            <th scope="col">Name</th>
+            <th scope="col">Score</th>
+            <th scope="col">Country</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>1</td>
-            <td>Budi</td>
-            <td>150</td>
+            <th scope="row">1</th>
+            <td>John Doe</td>
+            <td>1200</td>
+            <td>USA</td>
           </tr>
           <tr>
-            <td>2</td>
-            <td>Budi2</td>
-            <td>120</td>
+            <th scope="row">2</th>
+            <td>Jane Smith</td>
+            <td>1150</td>
+            <td>Canada</td>
           </tr>
           <tr>
-            <td>3</td>
-            <td>Budi3</td>
-            <td>110</td>
+            <th scope="row">3</th>
+            <td>Samuel Green</td>
+            <td>1100</td>
+            <td>UK</td>
           </tr>
           <tr>
-            <td>4</td>
-            <td>Budi4</td>
-            <td>100</td>
+            <th scope="row">4</th>
+            <td>Alice Brown</td>
+            <td>1050</td>
+            <td>Australia</td>
           </tr>
           <tr>
-            <td>5</td>
-            <td>Budi5</td>
-            <td>90</td>
+            <th scope="row">5</th>
+            <td>Michael Johnson</td>
+            <td>1000</td>
+            <td>Germany</td>
           </tr>
         </tbody>
       </table>
-    </section>
+    </div>
     <footer>
       <p>&copy; 2024 Platform Gamifikasi Lensa Kata</p>
     </footer>
