--- a/LensaKata-with-Bootstrap/games/petualangan_kata.html
+++ b/LensaKata-with-Bootstrap/games/petualangan_kata.html
@@ -12,8 +12,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" type="text/css" href="../css/styles3.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles_game.css">
 </head>
 <body>
     <header>
