--- a/LensaKata-with-Bootstrap/index.html
+++ b/LensaKata-with-Bootstrap/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LensaKata - Bermain dan Belajar</title>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="../css/style.css">
-    <!-- Bootstrap -->
+    <link href="../LensaKata-with-Bootstrap/css/style.css" rel="stylesheet"
+
+    <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -18,7 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-custom">
             <div class="container-fluid ">
                 <a class="navbar-brand text-white" href="#">
-                    <img src="../img/logo-4.png" alt="Logo" width="70" height="70">
+                    <img src="../LensaKata-with-Bootstrap/img/logo-4.png" width="50" height="50">
                     LensaKata
                 </a>
                 
@@ -31,24 +32,24 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Beranda</a>
+                            <a class="nav-link" href="../LensaKata-with-Bootstrap/index.html">Beranda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../about.html">Tentang Kami</a>
+                            <a class="nav-link" href="../LensaKata-with-Bootstrap/about.html">Tentang Kami</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="gameDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Game
                             </a>
                             <ul class="dropdown-menu dropdown-menu-custom" aria-labelledby="gameDropdown">
-                                <li><a class="dropdown-item" href="games\petualangan_kata.html">Petualangan Kata</a></li>
-                                <li><a class="dropdown-item" href="games\pulau_kata.html">Pulau Kata</a></li>
+                                <li><a class="dropdown-item" href="games/petualangan_kata.html">Petualangan Kata</a></li>
+                                <li><a class="dropdown-item" href="games/pulau_kata.html">Pulau Kata</a></li>
                                 <li><a class="dropdown-item" href="games/sambung_kata.html">Sambung Kata</a></li>
-                                <li><a class="dropdown-item" href="games\sinonim_antonim_kata.html">Sinonim & Antonim Kata</a></li>
+                                <li><a class="dropdown-item" href="games/sinonim_antonim_kata.html">Sinonim & Antonim Kata</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="login.html">Login</a>
+                            <a class="nav-link" href="../LensaKata-with-Bootstrap/login.html">Login</a>
                         </li>
                     </ul>
                 </div>
