--- a/LensaKata-with-Bootstrap/login.html
+++ b/LensaKata-with-Bootstrap/login.html
@@ -5,49 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - LensaKata</title>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../LensaKata-with-Bootstrap/css/style.css">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-custom">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="../img/logo-4.png" alt="Logo" width="70" height="70">
-                LensaKata
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Beranda</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Tentang Kami</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="gameDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Game
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-custom" aria-labelledby="gameDropdown">
-                            <li><a class="dropdown-item" href="games\petualangan_kata.html">Petualangan Kata</a></li>
-                            <li><a class="dropdown-item" href="games\pulau_kata.html">Pulau Kata</a></li>
-                            <li><a class="dropdown-item" href="games/sambung_kata.html">Sambung Kata</a></li>
-                            <li><a class="dropdown-item" href="games\sinonim_antonim_kata.html">Sinonim & Antonim Kata</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 
     <!-- Login Form Section -->
     <section class="login-section">
